--- a/src/app/component/view/view.component.html
+++ b/src/app/component/view/view.component.html
@@ -1,1 +1,38 @@
-<p>view works!</p>
+<header style="background-color: rgb(36, 36, 194); padding: 20px;">
+    <h1 style="text-align: center; color: white; margin: 0 auto;">Angular Employee CRUD application</h1>
+</header>
+<hr>
+
+<div class="container-fluid">
+    <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Mobile</th>
+            <th scope="col">Gender</th>
+            <th scope="col">Position</th>
+            <th scope="col">Address</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of myemployee">
+            <th>{{user.id}}</th>
+            <td>{{user.name}}</td>
+            <td>{{user.mobile}}</td>
+            <td>{{user.gender}}</td>
+            <td>{{user.email}}r</td>
+            <td>{{user.address}}</td>
+            <td>
+                <mat-icon [routerLink]="['/edit/update/{{user.id}}']" style="color: blue;">create</mat-icon>
+                <mat-icon (click)="deleteuser(user)" style="color: red;">delete</mat-icon>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+</div>
+
+<div style="text-align: center;">
+  <button [routerLink]="['/']" class="btn btn-outline-dark btn-lg">BACK</button>
+</div>
