Add edit logic and finish app

--- a/src/app/component/edit/edit.component.html
+++ b/src/app/component/edit/edit.component.html
@@ -8,7 +8,7 @@
             <div class="col-4">
                 <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Employee id</mat-label>
-                    <input matInput type="number" name="eid" [(ngModel)]="empy.id" placeholder="Enter employee id">
+                    <input matInput type="number" name="eid" [(ngModel)]="empy.eid" placeholder="Enter employee id">
                   </mat-form-field>
             </div>
             <div class="col-4">
@@ -63,7 +63,7 @@
     </form>
 
     <div style="text-align: center;">
-        <button type="button" class="btn btn-outline-success btn-lg" style="margin-right: 10px;">Update</button>
+        <button (click)="updatedata()" type="button" class="btn btn-outline-success btn-lg" style="margin-right: 10px;">Update</button>
         <button [routerLink]="['/view']" type="button" class="btn btn-outline-info btn-lg">Back</button>
     </div>
 </div>
