--- a/src/app/component/add/add.component.html
+++ b/src/app/component/add/add.component.html
@@ -8,7 +8,7 @@
             <div class="col-4">
                 <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Employee id</mat-label>
-                    <input matInput type="number" name="eid" [(ngModel)]="empy.id" placeholder="Enter employee id">
+                    <input matInput type="number" name="eid" [(ngModel)]="empy.eid" placeholder="Enter employee id">
                   </mat-form-field>
             </div>
             <div class="col-4">
